--- a/app/css/index.css
+++ b/app/css/index.css
@@ -92,3 +92,87 @@
   padding-top: 5px;
   border-top: 1px solid #879cff;
 }
+
+/* --- Add course --- */
+
+.btn-add-course {
+  margin-left: 5px;
+  border: none;
+  background: transparent;
+  outline: none;
+}
+
+.btn-add-course img {
+  width: 30px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.group {
+  position: relative;
+  top: 50px;
+  margin: 0 auto;
+  width: 340px;
+  height: 50px;
+}
+
+input {
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: inline-block;
+  width: 300px;
+  border: none;
+  border-bottom: 1px solid #757575;
+  background-color: #f4e6fc;
+}
+
+input:focus {
+  outline: none;
+}
+
+/* --- Label --- */
+
+label {
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label,
+input:valid ~ label {
+  top: -20px;
+  font-size: 14px;
+  color: #5264ae;
+}
+
+/* --- Bottom bars --- */
+
+.bar {
+  position: relative;
+  display: block;
+  width: 300px;
+}
+
+.bar:before {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #5264ae;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+input:focus ~ .bar:before {
+  width: 100%;
+}
