--- a/app/css/index.css
+++ b/app/css/index.css
@@ -123,7 +123,7 @@ input {
   width: 300px;
   border: none;
   border-bottom: 1px solid #757575;
-  background-color: #f4e6fc;
+  background-color: transparent;
 }
 
 input:focus {
