Scripts de empacotamento para Linux, Mac e Win Também foram feitas algumas alterações na estrutura do projeto

--- a/app/css/reset.css
+++ b/app/css/reset.css
@@ -14,5 +14,5 @@ body {
   height: 100%;
   width: 100%;
   font-family: 'Roboto', sans-serif;
-  background: url(../images/texture.png) top left repeat;
+  background: url(../img/texture.png) top left repeat;
 }
